--- a/service-web/terms.html
+++ b/service-web/terms.html
@@ -20,8 +20,20 @@
   th {
     border-bottom: 1px solid #000;
   }</style>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-586HJXX');</script>
+  <!-- End Google Tag Manager -->
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-586HJXX"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 <div class="wrapper">
   <div class="pb5 pb6-m ph3 ph3-m ph3-l relative">
     <nav class="fixed-header-mobile pt3 pb3 pb0-ns pt3-ns dt w-100 mw8 center bb nav-border-b">
@@ -36,7 +48,7 @@
     <div class="dt w-100 mw8 ph3 ph3-m ph3-l center">
       <section class="w-100 tr">
         <div style="text-align: left; " id="terms">
-          <h3 style="text-align: center">Terms of Use (#terms)</h3>
+          <h3 style="text-align: center">Terms of Use</h3>
           <p>These Terms were last updated on May 25th, 2018</p>
           <p>Your use of the Service is governed by the following terms of service (“Terms”). Please review the Terms
             carefully before using the Service. Do not use the Service if you do not accept the Terms.
