Fixed logo in terms and added in the back link

--- a/service-api/public/terms.html
+++ b/service-api/public/terms.html
@@ -39,7 +39,15 @@
     <nav class="fixed-header-mobile pt3 pb3 pb0-ns pt3-ns dt w-100 mw8 center bb nav-border-b">
       <div class="w-20 fl ml3 ml0-ns tl pa2-ns">
         <a href="/" class="no-underline">
-          <img src="./src/assets/images/site-logo.png"/>
+          <img src="site-logo.png"/>
+        </a>
+      </div>
+      <div class="w-60 fl ml3 ml0-ns tl pa2-ns">
+
+      </div>
+      <div class="w-20 fl ml3 ml0-ns tl pa2-ns">
+        <a href="/" class="no-underline">
+          &larr; Back To Application
         </a>
       </div>
     </nav>
